# pathfollowingbot

./: README.md  frames_2026-07-07_22.25.54.gv  frames_2026-07-07_23.15.23.gv  frames_2026-07-08_21.38.32.gv  frames_2026-07-08_22.22.39.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mobile_robot/lib/mobile_robot/: image_to_world.py  path_planner.py  publish_path.py  pure_pursuit.py  scan_frame_corrector  track_to_walls.py
install/mobile_robot/share/mobile_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  (+2 more)
log/: latest_build
src/mobile_robot/: CMakeLists.txt  package.xml
src/mobile_robot/config/: nav2_params.yaml  slam_toolbox.yaml
src/mobile_robot/docs/: PURE_PURSUIT.md
src/mobile_robot/launch/: bringup.launch.py  frames_2026-07-08_23.11.33.gv  gazebo_model.launch.py  map_saver.launch.py  nav2.launch.py  path_follower.launch.py  slam.launch.py  spawn_in_track.launch.py
src/mobile_robot/model/: robot.gazebo.xacro  robot.xacro
src/mobile_robot/model/install/: local_setup.sh  setup.sh
src/mobile_robot/models/track_walls/: model.config
src/mobile_robot/parameters/: bridge_parameters.yaml  mapper_params_online_async.yaml
src/mobile_robot/rviz/: slam.rviz
src/mobile_robot/scripts/: image_to_world.py  path_planner.py  publish_path.py  pure_pursuit.py  track_to_walls.py
src/mobile_robot/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/mobile_robot/scripts/log/: latest_build
src/mobile_robot/src/: scan_frame_corrector.cpp
src/mobile_robot/tools/: generate_track.py
src/mobile_robot/worlds/: track.world
src/mobile_robot/worlds/install/: local_setup.sh  setup.sh
src/mobile_robot/worlds/log/: latest_build
(+57 files in other folders)
